
$Id$

Changes since v2.11
===================

o Changed the in-entry finder so that the find dialog retains focus when the
  find button is pressed.

o When a guide name is provided on the command line or via DDE and it
  doesn't have a path attached and it isn't in whatever Windows thinks is
  the current directory the file will be looked for in the default guide
  directory.

o DDE support now handles multi-line macros.

Changes since v2.10
===================

o Added a panel to the guide window status bar that shows if the entry
  you're viewing is a short or a long.

o Added "Home" navigation to the guide window. This takes you to the first
  entry in a guide.

o Added a "Focus When Finished" option to the global finder window. When set
  the global finder will display itself and grab focus when a find operation
  has finished.

o Added optional colour printing.

o Added an option that changes the way in-entry searches in short entries
  happens. If the option is turned on a beginning-of-line hit is always
  found in preferences to an in-line hit. This lets users configure things
  so that short-searching is a little more like the way the old NG reader
  used to work (albeit WEG does further searching whereas the old NG reader
  only ever used to find the first hit).

o Implemented a "searchguide" macro for the DDE support.

Changes since v2.9
==================

o The file save dialog used for saving source didn't do an overwrite prompt
  check. Fixed.

o Ensured that the edit control in the in-entry find dialog gets focus and
  that the content is highlighted when the dialog is re-focused.

o When a search finishes in the global finder the status bar now tells you
  how many items were found and how long the search took.

Changes since v2.8
==================

o You can now drag a guide from the guide manager and drop it on the
  background of the main window to open a guide.

o You can now drag a bookmark from the bookmark window and drop it on the