@@ -13,6 +13,10 @@ o When a guide name is provided on the command line or via DDE and it
   the current directory the file will be looked for in the default guide
   directory.
 
+o Re-worked the DDE macros that deal with the global search window to make
+  controlling searches a lot more flexible. Please note that this isn't a
+  backward compatible change. See README.txt for details of the news macros.
+
 o DDE support now handles multi-line macros.
 
 Changes since v2.10
